[project]
name = "timescale-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "datasets>=3.2.0",
    "instructor>=1.7.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pgvector>=0.3.6",
    "pillow>=11.0.0",
    "psycopg>=3.2.3",
    "python-dotenv>=1.0.1",
]
